--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/react": "^6.5.16",
+    "markdown-to-jsx": "^7.2.0",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@storybook/react": "^6.5.16"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
